Bug 1146529 - Part 1: Allow codecs to be "strongly preferred", and set this bit on H264 hardware codecs. r=jesup